hphp/hack/test/typecheck/coeffects/tyvars1.php.exp
File "tyvars1.php", line 16, characters 5-20:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "tyvars1.php", line 15, characters 19-20:
  From this declaration, the context of this function body provides the capability IO
  File "tyvars1.php", line 22, characters 4-21:
  But the function being called requires the capability set {IO, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
